--- a/UnsplashPackages/.swiftpm/xcode/xcshareddata/xcschemes/Home.xcscheme
+++ b/UnsplashPackages/.swiftpm/xcode/xcshareddata/xcschemes/Home.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DCFB4A452BA5D48E00B0F78B"
-               BuildableName = "Unsplah.app"
-               BlueprintName = "Unsplah"
-               ReferencedContainer = "container:Unsplah.xcodeproj">
+               BlueprintIdentifier = "Home"
+               BuildableName = "Home"
+               BlueprintName = "Home"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,34 +29,10 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Unsplah/Unsplah.xctestplan"
+            reference = "container:Sources/Home/Home.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DCFB4A552BA5D49000B0F78B"
-               BuildableName = "UnsplahTests.xctest"
-               BlueprintName = "UnsplahTests"
-               ReferencedContainer = "container:Unsplah.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DCFB4A5F2BA5D49000B0F78B"
-               BuildableName = "UnsplahUITests.xctest"
-               BlueprintName = "UnsplahUITests"
-               ReferencedContainer = "container:Unsplah.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -68,16 +44,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DCFB4A452BA5D48E00B0F78B"
-            BuildableName = "Unsplah.app"
-            BlueprintName = "Unsplah"
-            ReferencedContainer = "container:Unsplah.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -85,16 +51,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DCFB4A452BA5D48E00B0F78B"
-            BuildableName = "Unsplah.app"
-            BlueprintName = "Unsplah"
-            ReferencedContainer = "container:Unsplah.xcodeproj">
+            BlueprintIdentifier = "Home"
+            BuildableName = "Home"
+            BlueprintName = "Home"
+            ReferencedContainer = "container:">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
