--- a/.github/workflows/build_tests_branches.yml
+++ b/.github/workflows/build_tests_branches.yml
@@ -20,12 +20,15 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0'
