--- a/.github/workflows/build_tests_branches.yml
+++ b/.github/workflows/build_tests_branches.yml
@@ -27,10 +27,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: checkout repo
       - uses: actions/checkout@v4
+      - name: setup xcode
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest
+      - name: ignore macro validation
+        run: |
+          defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0'
