--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,15 +28,17 @@ jobs:
     steps:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: "checkout repo"
-      - uses: actions/checkout@v4
-      - name: "setup xcode"
-      - uses: maxim-lobanov/setup-xcode@v1
+        uses: actions/checkout@v4
+      - name: "Setup xCode"
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest
-      - uses: ruby/setup-ruby@v1
+      - name: "Setup Ruby"
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0'
-      - uses: tashi-iu/setup-fastlane@v1
+      - name: "Setup Fastlane"
+        uses: tashi-iu/setup-fastlane@v1
       - name: "run gym"
         run: |
           fastlane gym --scheme "Unsplash" --project "unsplah/Unsplash.xcodeproj" --skip_archive	 --clean
